FedLCM support deploy a FATE without engine
