# server/docs/swagger.json
@@ -1479,6 +1479,130 @@
                     },
                     {
                         "type": "boolean",
+                        "description": "enable link an external Spark",
+                        "name": "enable_external_spark",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "external Spark info",
+                        "name": "external_spark_cores_per_node",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "external Spark info",
+                        "name": "external_spark_node",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "external Spark info",
+                        "name": "external_spark_master",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "external Spark info",
+                        "name": "external_spark_driverHost",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "external Spark info",
+                        "name": "external_spark_driverHostType",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "external Spark info",
+                        "name": "external_spark_portMaxRetries",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "external Spark info",
+                        "name": "external_spark_driverStartPort",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "external spark info",
+                        "name": "external_spark_blockManagerStartPort",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "external spark info",
+                        "name": "external_spark_pysparkPython",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "enable link an external HDFS",
+                        "name": "enable_external_hdfs",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "external HDFS info",
+                        "name": "external_hdfs_name_node",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "external HDFS info",
+                        "name": "external_hdfs_path_prefix",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "enable link an external Pulsar",
+                        "name": "enable_external_pulsar",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "external Pulsar info",
+                        "name": "external_pulsar_host",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "external Pulsar info",
+                        "name": "external_pulsar_mng_port",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "external Pulsar info",
+                        "name": "external_pulsar_port",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "external Pulsar info",
+                        "name": "external_pulsar_ssl_port",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
                         "description": "choose if use the FATE registry secret saved in the infra provider",
                         "name": "use_registry_secret",
                         "in": "query",
@@ -4066,6 +4190,75 @@
                 }
             }
         },
+        "service.ExternalHDFS": {
+            "type": "object",
+            "properties": {
+                "enable": {
+                    "type": "boolean"
+                },
+                "name_node": {
+                    "type": "string"
+                },
+                "path_prefix": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.ExternalPulsar": {
+            "type": "object",
+            "properties": {
+                "enable": {
+                    "type": "boolean"
+                },
+                "host": {
+                    "type": "string"
+                },
+                "mng_port": {
+                    "type": "integer"
+                },
+                "port": {
+                    "type": "integer"
+                },
+                "sslport": {
+                    "type": "integer"
+                }
+            }
+        },
+        "service.ExternalSpark": {
+            "type": "object",
+            "properties": {
+                "blockManagerStartPort": {
+                    "type": "integer"
+                },
+                "cores_per_node": {
+                    "type": "integer"
+                },
+                "driverHost": {
+                    "type": "string"
+                },
+                "driverHostType": {
+                    "type": "string"
+                },
+                "driverStartPort": {
+                    "type": "integer"
+                },
+                "enable": {
+                    "type": "boolean"
+                },
+                "master": {
+                    "type": "string"
+                },
+                "nodes": {
+                    "type": "integer"
+                },
+                "portMaxRetries": {
+                    "type": "integer"
+                },
+                "pysparkPython": {
+                    "type": "string"
+                }
+            }
+        },
         "service.FATEClusterDetail": {
             "type": "object",
             "properties": {
@@ -4586,6 +4779,15 @@
                 "endpoint_uuid": {
                     "type": "string"
                 },
+                "externalHDFS": {
+                    "$ref": "#/definitions/service.ExternalHDFS"
+                },
+                "externalPulsar": {
+                    "$ref": "#/definitions/service.ExternalPulsar"
+                },
+                "externalSpark": {
+                    "$ref": "#/definitions/service.ExternalSpark"
+                },
                 "federation_uuid": {
                     "type": "string"
                 },
@@ -4993,9 +5195,11 @@
             "type": "object",
             "properties": {
                 "kubeconfig_content": {
+                    "description": "KubeConfigContent stores the kubeconfig file of a K8s cluster",
                     "type": "string"
                 },
                 "namespaces_list": {
+                    "description": "NamespacesList stores namespaces the user in KubeConfigContent can access",
                     "type": "array",
                     "items": {
                         "type": "string"
